--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ pytest-asyncio==0.23.7 ; python_version >= "3.9" and python_version < "4.0"
 redis==4.6.0 ; python_version >= "3.9" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.9" and python_version < "4.0"
 sqlalchemy==2.0.30 ; python_version >= "3.9" and python_version < "4.0"
+uvicorn==0.30.6; python_version >= "3.9" and python_version < "4.0"
