--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ fastapi-cache2[redis]==0.2.1 ; python_version >= "3.9" and python_version < "4.0
 httpx==0.23.2 ; python_version >= "3.9" and python_version < "4.0"
 gunicorn==22.0.0 ; python_version >= "3.9" and python_version < "4.0"
 psycopg2==2.9.9 ; python_version >= "3.9" and python_version < "4.0"
+pydantic==2.9.0 ; python_version >= "3.9" and python_version < "4.0"
 pytest==8.2.2 ; python_version >= "3.9" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
 pytest-asyncio==0.23.7 ; python_version >= "3.9" and python_version < "4.0"
