--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-alembic==1.13.1; python_version >= "3.9" and python_version < "4.0"
+alembic==1.13.1 ; python_version >= "3.9" and python_version < "4.0"
+asyncpg==0.29.0  ; python_version >= "3.9" and python_version < "4.0"
 black==24.8.0; python_version >= "3.9" and python_version < "4.0"
 fastapi[all]==0.111.0 ; python_version >= "3.9" and python_version < "4.0"
 fastapi-cache2[redis]==0.2.1 ; python_version >= "3.9" and python_version < "4.0"
